--- a/public/index.html
+++ b/public/index.html
@@ -36,15 +36,28 @@
 
     <header>
       <div>
-        <img src="./images/profile-hex.png" alt="avatar" />
+        <!-- <img src="./images/profile-hex.png" alt="avatar" /> -->
+        <i class="fas fa-user-astronaut"></i>
       </div>
       <br>
       <div>
-        <h2>Neil Armstrong</h2>
+        <span><b>Neil</b> Armstrong</span>
       </div>
     </header>
 
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
+    <main class="container">
+      <section class="new-tweet">
+        <h2>Compose Tweet</h2>
+        <form method="POST" action="/tweets">
+          <label for="tweet-text">What are you humming about?</label>
+          <textarea name="text" id="tweet-text"></textarea>
+          <div>
+            <button type="submit">Tweet</button>
+            <output name="counter" class="counter" for="tweet-text">140</output>
+          </div>
+        </form>
+      </section>
+    </main>
   </body>
 </html>
