--- a/public/index.html
+++ b/public/index.html
@@ -52,8 +52,8 @@
     </header>
 
     <!-- Page-specific (main) content here -->
-    <main class="container">
-      <section class="new-tweet">
+    <main id="container">
+      <section id="new-tweet">
         <!-- <h2>Compose Tweet</h2> -->
         <form method="POST" action="/tweets/">
           <label for="tweet-text" >What are you humming about?</label>
