Add new section to hold posted tweets
Need to prepend tweets
Previous implementation had posted tweets rendered directly to main container at the same level as new tweets

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,6 @@
 
     <!-- App JS -->
     <script type="text/javascript" src="scripts/composer-char-counter.js"></script>
-    <script type="text/javascript" src="scripts/time-passed.js"></script>
     <script type="text/javascript" src="scripts/client.js"></script>
 
   </head>
@@ -64,6 +63,7 @@
           </div>
         </form>
       </section>
+      <section id="tweets"></section>
     </main>
   </body>
 </html>
